--- a/.github/workflows/tech-news-feed.yml
+++ b/.github/workflows/tech-news-feed.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           committer_username: "QubitPi"
-          committer_email: "jack20191124@proton.me"
+          committer_email: "jack20220723@gmail.com"
           commit_message: "New HashiCorp Blog"
           comment_tag_name: "HASHICORP-BLOG"
           max_post_count: "3"
@@ -28,9 +28,23 @@ jobs:
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           committer_username: "QubitPi"
-          committer_email: "jack20191124@proton.me"
+          committer_email: "jack20220723@gmail.com"
           commit_message: "New Screwdriver CD Blog"
           comment_tag_name: "SCREWDRIVER-CD-BLOG"
           max_post_count: "3"
           feed_list: "https://blog.screwdriver.cd/rss"    
           template: "<li><img src='https://github.com/QubitPi/QubitPi/blob/master/img/%E5%8F%AF%E8%8E%89-53.png?raw=true' width='30px' /><a href=$url>$title</a></li>"
+
+  loeb:
+    name: Loeb Classical Library
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: gautamkrishnar/blog-post-workflow@master
+        with:
+          committer_username: "QubitPi"
+          committer_email: "jack20220723@gmail.com"
+          commit_message: "New Loeb classical library publications"
+          comment_tag_name: "LOEB"
+          max_post_count: "3"
+          feed_list: "https://www.loebclassics.com/newsrss" 
